--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 # SECURITY
 SECRET_KEY=change-me-in-production
 DEBUG=true
-ALLOWED_HOSTS=*
 
 # DATABASE (use SQLite by default; override in prod)
 # DATABASE_URL=postgres://USER:PASS@HOST:5432/DBNAME
@@ -18,3 +17,9 @@ STRIPE_PUBLISHABLE_KEY=pk_test_51SNt3SDJRm5j27OzaNnKP0v9GJnCIC4OvYfMAweNsfVHfSk6
 
 #local testing
 PAYMENTS_ALLOW_UNVERIFIED_WEBHOOKS=true
+
+ALLOWED_HOSTS=localhost,127.0.0.1
+REDIS_HOST=redis
+REDIS_PORT=6379
+DEBUG=falseSTATIC_ROOT=/vol/static
+MEDIA_ROOT=/vol/media
